<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.shealth2fit.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Switch
            android:id="@+id/singleMultiModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:gravity="center"
            android:switchPadding="10dp"
            android:text="@string/single_day_mode"
            android:textOff="@string/range_mode"
            android:textOn="@string/single_day_mode" />

        <TextView
            android:id="@+id/rangeModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/range_mode"
            android:textColor="#000000" />


    </LinearLayout>

    <com.archit.calendardaterangepicker.customviews.DateRangeCalendarView
        android:id="@+id/calendarPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:disable_date_color="#ABABAB"
        custom:header_bg="@color/calendar_header"
        custom:range_color="@color/range_color"
        custom:selected_date_circle_color="@color/selected_date_circle_color"
        custom:title_color="@color/calendar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_calories_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|start"
            android:text="@string/default_count"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/calorie_unit"
            android:textColor="#C0C0C0"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/total_step_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|end"
            android:text="@string/default_count"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unit1"
            android:textColor="#C0C0C0"
            android:textSize="15sp" />
    </LinearLayout>


    <ListView
        android:id="@+id/binning_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        tools:listitem="@android:layout/simple_expandable_list_item_2"
        />
</LinearLayout>